--- a/lessons/05-client-jquery-ajax/burgerapp/views/ingredients.hbs
+++ b/lessons/05-client-jquery-ajax/burgerapp/views/ingredients.hbs
@@ -7,15 +7,20 @@
 </head>
 <body>
 
-	<h1>Forms and Stuff</h1>
-
-	<h2>AJAX request</h2>
-	<form id="ajax-form" action="getCat" method="POST">
-	  Name: <input type="text" name="name"/><br/>
-	  <input type="radio" name="mood" value="happy" checked/>Happy<br/>
-	  <input type="radio" name="mood" value="grumpy"/>Grumpy<br/>
-	  <input type="submit" value="Submit">
-	</form>
+    <table border="1">
+        <tr>
+            <th>Ingredient</th>
+            <th>Price</th>
+            <th></th>
+        </tr>
+        <tr>
+            <th>Broccoli</th>
+            <th>$9.41</th>
+            <th>
+                <button type="button">Out of Stock</button>
+            </th>
+        </tr>
+    </table>
 
 </body>
 <script type="text/javascript" src="javascripts/main.js"></script>
