--- a/lessons/05-client-jquery-ajax/burgerapp/views/ingredients.hbs
+++ b/lessons/05-client-jquery-ajax/burgerapp/views/ingredients.hbs
@@ -14,7 +14,7 @@
             <th></th>
         </tr>
         {{#each ingredients}}
-            <tr>
+            <tr id={{this._id}}>
                 <td>{{name}}</td>
                 <td>{{price}}</td>
                 <td>
