--- a/lessons/05-client-jquery-ajax/burgerapp/views/ingredients.hbs
+++ b/lessons/05-client-jquery-ajax/burgerapp/views/ingredients.hbs
@@ -22,7 +22,7 @@
                 </td>
 
                 <td>
-                    <button type="button">Edit</button>
+                    <button type="button" class="edit_button">Edit</button>
                 </td>
             </tr>
 
@@ -34,6 +34,14 @@
         Name: <input type="text" name="name"/><br/>
         Price: $<input type="number" name="price" min="0.00" step="0.01" /> <br/>
         <input type="submit" value="Add">
+    </form>
+
+    <form id="edit_form" action="editIngredients" method="POST" hidden>
+        Name: <input type="text" name="name"/><br/>
+        Price: $<input type="number" name="price" min="0.00" step="0.01" /> <br/>
+        <input type="hidden" id="selected"/>
+        <input type="submit" value="Save">
+        <input type="reset" value="Cancel">
     </form>
 
 </body>
