got client side templating working!!!!

--- a/lessons/05-client-jquery-ajax/burgerapp/views/ingredients.hbs
+++ b/lessons/05-client-jquery-ajax/burgerapp/views/ingredients.hbs
@@ -35,5 +35,7 @@
 </body>
 
 <script type="text/javascript" src="javascripts/ingredients.js"></script>
+<script src='javascripts/handlebars.js'></script>
+<script src='javascripts/templates/templates.js'></script>
 
 </html>
