--- a/lessons/05-client-jquery-ajax/burgerapp/views/layout.hbs
+++ b/lessons/05-client-jquery-ajax/burgerapp/views/layout.hbs
@@ -2,9 +2,14 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     {{{body}}}
   </body>
+
+  <script type="text/javascript" src="javascripts/ingredients.js"></script>
+	<script src='javascripts/handlebars.js'></script>
+	<script src='javascripts/templates/templates.js'></script>
 </html>
