order page funcitoning

--- a/lessons/05-client-jquery-ajax/burgerapp/views/layout.hbs
+++ b/lessons/05-client-jquery-ajax/burgerapp/views/layout.hbs
@@ -10,6 +10,7 @@
   </body>
 
   <script type="text/javascript" src="javascripts/ingredients.js"></script>
-	<script src='javascripts/handlebars.js'></script>
+  <script type="text/javascript" src="javascripts/order.js"></script>
+	<script src='http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-v4.0.5.js'></script>
 	<script src='javascripts/templates/templates.js'></script>
 </html>
