--- a/lessons/05-client-jquery-ajax/burgerapp/views/layout.hbs
+++ b/lessons/05-client-jquery-ajax/burgerapp/views/layout.hbs
@@ -12,6 +12,6 @@
   <script type="text/javascript" src="javascripts/ingredients.js"></script>
   <script type="text/javascript" src="javascripts/order.js"></script>
   <script type="text/javascript" src="javascripts/kitchen.js"></script>
-	<script src='http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-v4.0.5.js'></script>
+	<script src='http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars.runtime-v4.0.5.js'></script>
 	<script src='javascripts/templates/templates.js'></script>
 </html>
