im commiting bc im afraid

--- a/lessons/06-css-development-style/twoter/views/index.hbs
+++ b/lessons/06-css-development-style/twoter/views/index.hbs
@@ -1,5 +1,11 @@
-{{#if user}}
-	<p>You are currently logged in as {{user.username}}</p><a href="/logout">Logout</a>
-{{else}}
-	<a href="/login">Login</a><br/><a href="/register">Register</a>
-{{/if}}
+<form id="twote_form" action="/twote" method="post">
+    <label for="twote_text">Twote</label>
+    <br>
+    <input name="twote_text" id="twote_text" required>
+    <br>
+    <input type="submit" value="Twote">
+    <br>
+    {{#each twote_user}}
+        {{> twot}}
+    {{/each}}
+</form>
