--- a/lessons/06-css-development-style/twoter/views/layout.hbs
+++ b/lessons/06-css-development-style/twoter/views/layout.hbs
@@ -8,5 +8,6 @@
   <body>
     {{{body}}}
   </body>
+  <script type="text/javascript" src="javascripts/home.js"></script>
   <script type="text/javascript" src="javascripts/login.js"></script>
 </html>
