--- a/lessons/06-css-development-style/twoter/views/login.hbs
+++ b/lessons/06-css-development-style/twoter/views/login.hbs
@@ -1,4 +1,4 @@
-<form id="login_form" action="/login/login" method="post">
+<form id="login_form" action="/login" method="post">
     <label for="username">Username</label>
     <input name="username" id="username" required>
     <br>
