--- a/lessons/06-css-development-style/twoter/views/index.hbs
+++ b/lessons/06-css-development-style/twoter/views/index.hbs
@@ -5,7 +5,11 @@
     <br>
     <input type="submit" value="Twote">
     <br>
-    {{#each twote_user}}
-        {{> twot}}
-    {{/each}}
+    <div id="twote_div">
+        {{#each twote_user}}
+            {{> twot}}
+        {{/each}}
+
+    </div>
+
 </form>
