--- a/lessons/06-css-development-style/twoter/views/layout.hbs
+++ b/lessons/06-css-development-style/twoter/views/layout.hbs
@@ -3,11 +3,13 @@
   <head>
     <title>{{title}}</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars.runtime-v4.0.5.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     {{{body}}}
   </body>
+  <script type="text/javascript" src="javascripts/precompile.js"></script>
   <script type="text/javascript" src="javascripts/home.js"></script>
   <script type="text/javascript" src="javascripts/login.js"></script>
 </html>
