--- a/lessons/06-css-development-style/twoter/views/partials/twot.hbs
+++ b/lessons/06-css-development-style/twoter/views/partials/twot.hbs
@@ -1,5 +1,7 @@
-<p>
-{{twote.text}} <br>
-{{user.username}}
+<article>
 
-</p>
+<div class="twote_text">{{twote.text}}</div>
+<br>
+<div class="twote_username">{{user.username}}</div>
+
+</article>
