--- a/lessons/06-css-development-style/twoter/views/layout.hbs
+++ b/lessons/06-css-development-style/twoter/views/layout.hbs
@@ -2,14 +2,19 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars.runtime-v4.0.5.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     {{{body}}}
   </body>
-  <script type="text/javascript" src="javascripts/precompile.js"></script>
-  <script type="text/javascript" src="javascripts/home.js"></script>
-  <script type="text/javascript" src="javascripts/login.js"></script>
+  <script type="text/javascript" src="/javascripts/precompile.js"></script>
+  <script type="text/javascript" src="/javascripts/home.js"></script>
+  <script type="text/javascript" src="/javascripts/login.js"></script>
 </html>
