--- a/lessons/06-css-development-style/twoter/views/index.hbs
+++ b/lessons/06-css-development-style/twoter/views/index.hbs
@@ -5,7 +5,7 @@
             <form role="form" id="twote_form">
                 <div class="form-group">
                     <label for="twote_text">Twote:</label>
-                    <input name="twote_text" class="form-control input-lg" id="twote_text" required>
+                    <input name="twote_text" class="form-control input-lg" required>
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
                 <!-- <input type="submit" value="Twote"> -->
