--- a/lessons/06-css-development-style/twoter/views/login.hbs
+++ b/lessons/06-css-development-style/twoter/views/login.hbs
@@ -1,16 +1,19 @@
-<form id="login_form" action="/login" method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <br>
-    <label for="password">Password</label>
-    <input name="password" type="password" id="password" required>
-    <br>
-    <div id="error_message" hidden>
-    	<br>
-    </div>
-<!--     {{#if error}}
-    	{{error}} <br>
-    {{/if}} -->
-    <input type="button" id="create_user" value="Create user">
-    <input type="submit" value="Login">
-</form>
+<div class="col-md-4 col-md-offset-4">
+<div class="flex-container">
+
+</div>
+    <form role="form" id="login_form" action="/login" method="post">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input name="username" id="username" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label id="password_label" for="password">Password</label>
+            <input name="password" type="password" id="password" class="form-control" required>
+        </div>
+        <div class="form-group" id="error_message" hidden> </div>
+        <input type="button" id="create_user" class="btn btn-default" value="Create user">
+        <!-- <button id="create_user" class="btn btn-default">Create user</button> -->
+        <button type="submit" class="btn btn-default">Login</button>
+    </form>
+</div>
