--- a/lessons/06-css-development-style/twoter/views/partials/twot.hbs
+++ b/lessons/06-css-development-style/twoter/views/partials/twot.hbs
@@ -1,7 +1,7 @@
 <article>
 
-<div class="twote_text">{{twote.text}}</div>
+<div class="twote_text">{{text}}</div>
 <br>
-<div class="twote_username">{{user.username}}</div>
+<div class="twote_username">{{_creator.username}}</div>
 
 </article>
