--- a/lessons/06-css-development-style/twoter/views/index.hbs
+++ b/lessons/06-css-development-style/twoter/views/index.hbs
@@ -5,21 +5,41 @@
             <form role="form" id="twote_form">
                 <div class="form-group">
                     <label for="twote_text">Twote:</label>
-                    <input name="twote_text" class="form-control input-lg" required>
+                    <input name="twote_text" id="twote_input_text" class="form-control input-lg" required>
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-                <!-- <input type="submit" value="Twote"> -->
+                <button type="submit" id="twote_btn" class="btn btn-lg btn-primary"
+                {{#if user}} {{else}} disabled {{/if}}
+                >Submit</button>
             </form>
-
+        </div>
+        <div class="col-md-4">
+            <div id="logged_in_indicator">
+                {{#if user}}
+                    Logged in as {{user.username}}
+                    <a href="/logout"><button id="log_out_btn" class="btn-primary btn-md">Log out</button></a>
+                {{else}}
+                    Not logged in
+                    <a href="/login"><button id="log_out_btn" class="btn-primary btn-md">Log in</button></a>
+                {{/if}}
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
             <div id="twote_div">
-                {{#each twote_user}}
+                {{#each twotes}}
                     {{> twot}}
                 {{/each}}
-
             </div>
         </div>
         <div class="col-md-4">
-            Sup
+            <div id="checkbox_group">
+                {{#each users}}
+                    <div class="checkbox">
+                        <label><input type="checkbox" value="" id={{_id}}>{{username}}</label>
+                    </div>
+                {{/each}}
+            </div>
         </div>
     </div>
 
