facebook works on its own

--- a/lessons/06-css-development-style/twoter/views/login.hbs
+++ b/lessons/06-css-development-style/twoter/views/login.hbs
@@ -9,6 +9,7 @@
             <input name="password" type="password" id="password" class="form-control" required>
         </div>
         <div class="form-group" id="error_message" hidden> </div>
+        <a href="/auth/facebook"><input type="button" class="btn btn-default" value="Log in with Facebook"></a>
         <input type="button" id="create_user" class="btn btn-default" value="Create user">
         <!-- <button id="create_user" class="btn btn-default">Create user</button> -->
         <button type="submit" class="btn btn-default">Login</button>
