--- a/lessons/06-css-development-style/twoter/views/partials/twot.hbs
+++ b/lessons/06-css-development-style/twoter/views/partials/twot.hbs
@@ -2,6 +2,13 @@
 
 <div class="twote_text">{{text}}</div>
 <br>
-<div class="twote_username">{{_creator.username}}</div>
+<div class="twote_username">
+
+	{{#if _creator.facebook.id}}
+	    {{_creator.facebook.name}}
+	{{else}}
+	    {{_creator.username}}
+	{{/if}}
+</div>
 
 </article>
