--- a/lessons/09-clientside-frameworks/to_do/server/views/index.html
+++ b/lessons/09-clientside-frameworks/to_do/server/views/index.html
@@ -38,8 +38,7 @@
 	            <div class="col-sm-8 col-sm-offset-2">
 
 	            	<div class="todo_item" ng-repeat="todo in todos">
-	            		<!-- <a href="#" editable-text="todo.text">{{ todo.text }}</a> -->
-	            		{{ todo.text }}
+	            		<a href="#" editable-text="todo.text">{{ todo.text }}</a>
 	            		<button type="button" class="btn btn-warning">Edit</button>
 	            		<button type="button" class="btn btn-danger">Delete</button>
 	            	</div>
